cartopy/docs/v0.19/_sources/gallery/web_services/wmts.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/web_services/wmts.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_web_services_wmts.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_web_services_wmts.py:


Interactive WMTS (Web Map Tile Service)
---------------------------------------

This example demonstrates the interactive pan and zoom capability
supported by an OGC web services Web Map Tile Service (WMTS) aware axes.

The example WMTS layer is a single composite of data sampled over nine days
in April 2012 and thirteen days in October 2012 showing the Earth at night.
It does not vary over time.

The imagery was collected by the Suomi National Polar-orbiting Partnership
(Suomi NPP) weather satellite operated by the United States National Oceanic
and Atmospheric Administration (NOAA).

.. GENERATED FROM PYTHON SOURCE LINES 17-36


.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "/root/project/examples/web_services/wmts.py", line 35, in <module>
        main()
      File "/root/project/examples/web_services/wmts.py", line 27, in main
        ax.add_wmts(url, layer)
      File "/root/project/lib/cartopy/mpl/geoaxes.py", line 2140, in add_wmts
        gettile_extra_kwargs=wmts_kwargs)
      File "/root/project/lib/cartopy/io/ogc_clients.py", line 356, in __init__
        wmts = owslib.wmts.WebMapTileService(wmts)
      File "/opt/conda/envs/test-environment/lib/python3.7/site-packages/owslib/wmts.py", line 189, in __init__
        self._buildMetadata(parse_remote_metadata)
      File "/opt/conda/envs/test-environment/lib/python3.7/site-packages/owslib/wmts.py", line 240, in _buildMetadata
        gather_layers(caps, None)
      File "/opt/conda/envs/test-environment/lib/python3.7/site-packages/owslib/wmts.py", line 237, in gather_layers
        'already exists' % cm.id)
    KeyError: 'Content metadata for layer "AMSUA_NOAA15_Brightness_Temp_Channel_10" already exists'






|

.. code-block:: default

    import matplotlib.pyplot as plt
    import cartopy.crs as ccrs


    def main():
        url = 'https://map1c.vis.earthdata.nasa.gov/wmts-geo/wmts.cgi'
        layer = 'VIIRS_CityLights_2012'

        fig = plt.figure()
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.PlateCarree())
        ax.add_wmts(url, layer)
        ax.set_extent([-15, 25, 35, 60], crs=ccrs.PlateCarree())

        ax.set_title('Suomi NPP Earth at night April/October 2012')
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.842 seconds)


.. _sphx_glr_download_gallery_web_services_wmts.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: wmts.py <wmts.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: wmts.ipynb <wmts.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
